src/test/resources/templates/invalid/template-same-ids.kool
object Program4 {
  def/**/main () : Unit = {
    println(new Test<Int, Int, String, String, String>());
  }
}

class Test<T, T, T, T2, T2> {
}